--- a/nginx-pod.yaml
+++ b/nginx-pod.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod
+  labels:
+    environment: prod
+    tier: frontend
 spec:
   containers:
     - name: nginx-container
