--- a/two-containers-with-empty-dir.yaml
+++ b/two-containers-with-empty-dir.yaml
@@ -1,4 +1,4 @@
-appVersion: v1
+apiVersion: v1
 kind: Pod
 metadata:
   name: two-containers-with-empty-dir
@@ -12,10 +12,10 @@ spec:
     - name: busybox-container
       image: busybox:latest
       command: ["/bin/sh"]
-      args: ["-c", "while true; do sleep 30; done"] #prevents busy box from exiting afetr completion
+      args: ["-c", "while true; do sleep 30; done;"] # Prevents busybox from exiting after completion
       volumeMounts:
         - mountPath: /var/i-am-empty-dir-volume
           name: empty-dir-volume
   volumes:
-    - name: empty-dir-volume #name of the volume
-      emptyDir: {} #initialize an empty directory # path on the worker node
+    - name: empty-dir-volume # name of the volume
+      emptyDir: {} # Initialize an empty directory # The path on the worker node.
